// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset renders fieldset with large form inputs 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 12px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-height: 64px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
}

.emotion-2 svg {
  fill: #3B3B3B;
}

.emotion-2:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-2:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-2:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-2:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-2:disabled svg {
  fill: #ABABAB;
}

.emotion-2:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-2:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-3 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  color: currentColor;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-3::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-3:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-3::placeholder {
  color: #6A6A6A;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  margin-bottom: 0;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  margin-right: 16px;
}

.emotion-5 * {
  box-sizing: border-box;
}

.emotion-6 {
  position: absolute;
  top: 50%;
  left: 50%;
  background-color: #3358CC;
  border-radius: 50%;
  opacity: 0;
  width: 1px;
  height: 1px;
  -webkit-transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
  -moz-transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
  -ms-transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
  transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
}

.emotion-6:disabled {
  opacity: 0;
}

.emotion-6:hover:active:not(:disabled) {
  opacity: 0.4;
}

.emotion-6:valid:hover:not(:disabled) {
  background-color: #00601A;
  opacity: 0.2;
}

.emotion-6:valid:hover:active:not(:disabled) {
  background-color: #00601A;
  opacity: 0.4;
}

.emotion-6:invalid:hover:not(:disabled) {
  background-color: #A90000;
  opacity: 0.2;
}

.emotion-6:invalid:hover:active:not(:disabled) {
  background-color: #A90000;
  opacity: 0.4;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: opacity;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: opacity;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F1F1;
  border-color: #919191;
  border-width: 2px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-7 svg {
  fill: #FFFFFF;
}

.emotion-7:hover:not(:disabled) {
  background-color: #ECF1FF;
  border-color: #254CAC;
}

.emotion-7:focus:hover:not(:disabled) {
  background-color: #ECF1FF;
  border-color: #254CAC;
}

.emotion-7:checked:not(:disabled) {
  background-color: #3358CC;
  border-color: #3358CC;
}

.emotion-7:checked:hover:not(:disabled) {
  background-color: #254CAC;
  border-color: #254CAC;
}

.emotion-7:checked:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #3358CC;
}

.emotion-7:checked:focus:hover:not(:disabled) {
  background-color: #254CAC;
  border-color: #254CAC;
}

.emotion-7:invalid:hover:not(:disabled) {
  background-color: #FEECEC;
  border-color: #820000;
}

.emotion-7:invalid:focus:not(:disabled) {
  border-color: #A90000;
}

.emotion-7:invalid:focus:hover:not(:disabled) {
  background-color: #FEECEC;
  border-color: #820000;
}

.emotion-7:checked:invalid:not(:disabled) {
  background-color: #A90000;
  border-color: #A90000;
}

.emotion-7:checked:invalid:focus:not(:disabled) {
  background-color: #A90000;
  border-color: #A90000;
}

.emotion-7:checked:invalid:hover:not(:disabled) {
  background-color: #820000;
  border-color: #820000;
}

.emotion-7:checked:invalid:focus:hover:not(:disabled) {
  background-color: #820000;
  border-color: #820000;
}

.emotion-7:valid:hover:not(:disabled) {
  background-color: #E5F4EA;
  border-color: #004914;
}

.emotion-7:valid:focus:not(:disabled) {
  background-color: #F1F1F1;
  border-color: #00601A;
}

.emotion-7:valid:focus:hover:not(:disabled) {
  background-color: #E5F4EA;
  border-color: #004914;
}

.emotion-7:checked:valid:not(:disabled) {
  background-color: #00601A;
  border-color: #00601A;
}

.emotion-7:checked:valid:focus:not(:disabled) {
  background-color: #00601A;
  border-color: #00601A;
}

.emotion-7:checked:valid:hover:not(:disabled) {
  background-color: #004914;
  border-color: #004914;
}

.emotion-7:checked:valid:focus:hover:not(:disabled) {
  background-color: #004914;
  border-color: #004914;
}

.emotion-7:disabled {
  background-color: transparent;
  border-color: #E2E2E2;
}

.emotion-7:checked:disabled:not(:disabled) {
  background-color: #E2E2E2;
  border-color: #E2E2E2;
}

.emotion-7:checked:disabled:not(:disabled) svg {
  fill: #ABABAB;
}

.emotion-7:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #3358CC;
  border-color: #3358CC;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:invalid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  border-color: #A90000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:invalid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:invalid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #A90000;
  border-color: #A90000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:invalid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:valid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #F1F1F1;
  border-color: #00601A;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:valid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:valid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #00601A;
  border-color: #00601A;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:valid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #ECF1FF;
  border-color: #254CAC;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #254CAC;
  border-color: #254CAC;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:invalid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #FEECEC;
  border-color: #820000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:invalid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:invalid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #820000;
  border-color: #820000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:invalid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:valid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #E5F4EA;
  border-color: #004914;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:valid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:valid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #004914;
  border-color: #004914;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:valid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7 {
    transition-property: background-color,border-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7 {
    transition-property: background-color,border-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-8 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: inherit;
}

.emotion-9 {
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-9:disabled {
  color: #ABABAB;
}

.emotion-9::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-9::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      large legend
    </legend>
    <div
      class="emotion-2"
    >
      <input
        aria-invalid="false"
        class="emotion-3"
        id="mock-nk-1"
        name="input-text-field-large"
        type="text"
      />
    </div>
    <label
      class="emotion-4"
    >
      <div
        class="emotion-5"
        role="presentation"
      >
        <div
          class="emotion-6"
          data-testid="checkbox-feedback"
        />
        <div
          class="emotion-7"
        >
          <input
            class="emotion-8"
            data-testid="checkbox-input"
            id="mock-nk-1"
            name="input-checkbox-large"
            type="checkbox"
            value="tc"
          />
        </div>
      </div>
      <span
        class="emotion-9"
      >
        Agree with T&C large
      </span>
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset renders fieldset with medium form inputs 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 12px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
}

.emotion-2 svg {
  fill: #3B3B3B;
}

.emotion-2:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-2:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-2:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-2:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-2:disabled svg {
  fill: #ABABAB;
}

.emotion-2:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-2:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-3 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  color: currentColor;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-3::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-3:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-3::placeholder {
  color: #6A6A6A;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  margin-bottom: 0;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
}

.emotion-5 * {
  box-sizing: border-box;
}

.emotion-6 {
  position: absolute;
  top: 50%;
  left: 50%;
  background-color: #3358CC;
  border-radius: 50%;
  opacity: 0;
  width: 1px;
  height: 1px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-6:disabled {
  opacity: 0;
}

.emotion-6:hover:active:not(:disabled) {
  opacity: 0.4;
}

.emotion-6:valid:hover:not(:disabled) {
  background-color: #00601A;
  opacity: 0.2;
}

.emotion-6:valid:hover:active:not(:disabled) {
  background-color: #00601A;
  opacity: 0.4;
}

.emotion-6:invalid:hover:not(:disabled) {
  background-color: #A90000;
  opacity: 0.2;
}

.emotion-6:invalid:hover:active:not(:disabled) {
  background-color: #A90000;
  opacity: 0.4;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: opacity;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: opacity;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F1F1;
  border-color: #919191;
  border-width: 2px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-7 svg {
  fill: #FFFFFF;
}

.emotion-7:hover:not(:disabled) {
  background-color: #ECF1FF;
  border-color: #254CAC;
}

.emotion-7:focus:hover:not(:disabled) {
  background-color: #ECF1FF;
  border-color: #254CAC;
}

.emotion-7:checked:not(:disabled) {
  background-color: #3358CC;
  border-color: #3358CC;
}

.emotion-7:checked:hover:not(:disabled) {
  background-color: #254CAC;
  border-color: #254CAC;
}

.emotion-7:checked:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #3358CC;
}

.emotion-7:checked:focus:hover:not(:disabled) {
  background-color: #254CAC;
  border-color: #254CAC;
}

.emotion-7:invalid:hover:not(:disabled) {
  background-color: #FEECEC;
  border-color: #820000;
}

.emotion-7:invalid:focus:not(:disabled) {
  border-color: #A90000;
}

.emotion-7:invalid:focus:hover:not(:disabled) {
  background-color: #FEECEC;
  border-color: #820000;
}

.emotion-7:checked:invalid:not(:disabled) {
  background-color: #A90000;
  border-color: #A90000;
}

.emotion-7:checked:invalid:focus:not(:disabled) {
  background-color: #A90000;
  border-color: #A90000;
}

.emotion-7:checked:invalid:hover:not(:disabled) {
  background-color: #820000;
  border-color: #820000;
}

.emotion-7:checked:invalid:focus:hover:not(:disabled) {
  background-color: #820000;
  border-color: #820000;
}

.emotion-7:valid:hover:not(:disabled) {
  background-color: #E5F4EA;
  border-color: #004914;
}

.emotion-7:valid:focus:not(:disabled) {
  background-color: #F1F1F1;
  border-color: #00601A;
}

.emotion-7:valid:focus:hover:not(:disabled) {
  background-color: #E5F4EA;
  border-color: #004914;
}

.emotion-7:checked:valid:not(:disabled) {
  background-color: #00601A;
  border-color: #00601A;
}

.emotion-7:checked:valid:focus:not(:disabled) {
  background-color: #00601A;
  border-color: #00601A;
}

.emotion-7:checked:valid:hover:not(:disabled) {
  background-color: #004914;
  border-color: #004914;
}

.emotion-7:checked:valid:focus:hover:not(:disabled) {
  background-color: #004914;
  border-color: #004914;
}

.emotion-7:disabled {
  background-color: transparent;
  border-color: #E2E2E2;
}

.emotion-7:checked:disabled:not(:disabled) {
  background-color: #E2E2E2;
  border-color: #E2E2E2;
}

.emotion-7:checked:disabled:not(:disabled) svg {
  fill: #ABABAB;
}

.emotion-7:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #3358CC;
  border-color: #3358CC;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:invalid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  border-color: #A90000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:invalid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:invalid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #A90000;
  border-color: #A90000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:invalid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:valid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #F1F1F1;
  border-color: #00601A;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:valid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:valid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #00601A;
  border-color: #00601A;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:valid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #ECF1FF;
  border-color: #254CAC;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #254CAC;
  border-color: #254CAC;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:invalid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #FEECEC;
  border-color: #820000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:invalid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:invalid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #820000;
  border-color: #820000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:invalid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:valid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #E5F4EA;
  border-color: #004914;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:valid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:valid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #004914;
  border-color: #004914;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:valid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7 {
    transition-property: background-color,border-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7 {
    transition-property: background-color,border-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-8 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: inherit;
}

.emotion-9 {
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-9:disabled {
  color: #ABABAB;
}

.emotion-9::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-9::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      medium legend
    </legend>
    <div
      class="emotion-2"
    >
      <input
        aria-invalid="false"
        class="emotion-3"
        id="mock-nk-1"
        name="input-text-field-medium"
        type="text"
      />
    </div>
    <label
      class="emotion-4"
    >
      <div
        class="emotion-5"
        role="presentation"
      >
        <div
          class="emotion-6"
          data-testid="checkbox-feedback"
        />
        <div
          class="emotion-7"
        >
          <input
            class="emotion-8"
            data-testid="checkbox-input"
            id="mock-nk-1"
            name="input-checkbox-medium"
            type="checkbox"
            value="tc"
          />
        </div>
      </div>
      <span
        class="emotion-9"
      >
        Agree with T&C medium
      </span>
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset renders fieldset with small form inputs 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 12px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-height: 40px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
}

.emotion-2 svg {
  fill: #3B3B3B;
}

.emotion-2:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-2:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-2:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-2:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-2:disabled svg {
  fill: #ABABAB;
}

.emotion-2:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-2:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-3 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  color: currentColor;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 8px;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-3::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-3:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-3::placeholder {
  color: #6A6A6A;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  margin-bottom: 0;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.emotion-5 * {
  box-sizing: border-box;
}

.emotion-6 {
  position: absolute;
  top: 50%;
  left: 50%;
  background-color: #3358CC;
  border-radius: 50%;
  opacity: 0;
  width: 1px;
  height: 1px;
  -webkit-transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
  -moz-transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
  -ms-transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
  transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
}

.emotion-6:disabled {
  opacity: 0;
}

.emotion-6:hover:active:not(:disabled) {
  opacity: 0.4;
}

.emotion-6:valid:hover:not(:disabled) {
  background-color: #00601A;
  opacity: 0.2;
}

.emotion-6:valid:hover:active:not(:disabled) {
  background-color: #00601A;
  opacity: 0.4;
}

.emotion-6:invalid:hover:not(:disabled) {
  background-color: #A90000;
  opacity: 0.2;
}

.emotion-6:invalid:hover:active:not(:disabled) {
  background-color: #A90000;
  opacity: 0.4;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: opacity;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: opacity;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F1F1;
  border-color: #919191;
  border-width: 2px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-7 svg {
  fill: #FFFFFF;
}

.emotion-7:hover:not(:disabled) {
  background-color: #ECF1FF;
  border-color: #254CAC;
}

.emotion-7:focus:hover:not(:disabled) {
  background-color: #ECF1FF;
  border-color: #254CAC;
}

.emotion-7:checked:not(:disabled) {
  background-color: #3358CC;
  border-color: #3358CC;
}

.emotion-7:checked:hover:not(:disabled) {
  background-color: #254CAC;
  border-color: #254CAC;
}

.emotion-7:checked:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #3358CC;
}

.emotion-7:checked:focus:hover:not(:disabled) {
  background-color: #254CAC;
  border-color: #254CAC;
}

.emotion-7:invalid:hover:not(:disabled) {
  background-color: #FEECEC;
  border-color: #820000;
}

.emotion-7:invalid:focus:not(:disabled) {
  border-color: #A90000;
}

.emotion-7:invalid:focus:hover:not(:disabled) {
  background-color: #FEECEC;
  border-color: #820000;
}

.emotion-7:checked:invalid:not(:disabled) {
  background-color: #A90000;
  border-color: #A90000;
}

.emotion-7:checked:invalid:focus:not(:disabled) {
  background-color: #A90000;
  border-color: #A90000;
}

.emotion-7:checked:invalid:hover:not(:disabled) {
  background-color: #820000;
  border-color: #820000;
}

.emotion-7:checked:invalid:focus:hover:not(:disabled) {
  background-color: #820000;
  border-color: #820000;
}

.emotion-7:valid:hover:not(:disabled) {
  background-color: #E5F4EA;
  border-color: #004914;
}

.emotion-7:valid:focus:not(:disabled) {
  background-color: #F1F1F1;
  border-color: #00601A;
}

.emotion-7:valid:focus:hover:not(:disabled) {
  background-color: #E5F4EA;
  border-color: #004914;
}

.emotion-7:checked:valid:not(:disabled) {
  background-color: #00601A;
  border-color: #00601A;
}

.emotion-7:checked:valid:focus:not(:disabled) {
  background-color: #00601A;
  border-color: #00601A;
}

.emotion-7:checked:valid:hover:not(:disabled) {
  background-color: #004914;
  border-color: #004914;
}

.emotion-7:checked:valid:focus:hover:not(:disabled) {
  background-color: #004914;
  border-color: #004914;
}

.emotion-7:disabled {
  background-color: transparent;
  border-color: #E2E2E2;
}

.emotion-7:checked:disabled:not(:disabled) {
  background-color: #E2E2E2;
  border-color: #E2E2E2;
}

.emotion-7:checked:disabled:not(:disabled) svg {
  fill: #ABABAB;
}

.emotion-7:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #3358CC;
  border-color: #3358CC;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:invalid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  border-color: #A90000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:invalid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:invalid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #A90000;
  border-color: #A90000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:invalid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:valid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #F1F1F1;
  border-color: #00601A;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:valid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:valid:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #00601A;
  border-color: #00601A;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:valid:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #ECF1FF;
  border-color: #254CAC;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #254CAC;
  border-color: #254CAC;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:invalid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #FEECEC;
  border-color: #820000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:invalid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:invalid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #820000;
  border-color: #820000;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:invalid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:valid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #E5F4EA;
  border-color: #004914;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:valid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-7:checked:valid:focus-visible:hover:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  background-color: #004914;
  border-color: #004914;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:checked:valid:focus-visible:hover:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7 {
    transition-property: background-color,border-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7 {
    transition-property: background-color,border-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-8 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: inherit;
}

.emotion-9 {
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-9:disabled {
  color: #ABABAB;
}

.emotion-9::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-9::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      small legend
    </legend>
    <div
      class="emotion-2"
    >
      <input
        aria-invalid="false"
        class="emotion-3"
        id="mock-nk-1"
        name="input-text-field-small"
        type="text"
      />
    </div>
    <label
      class="emotion-4"
    >
      <div
        class="emotion-5"
        role="presentation"
      >
        <div
          class="emotion-6"
          data-testid="checkbox-feedback"
        />
        <div
          class="emotion-7"
        >
          <input
            class="emotion-8"
            data-testid="checkbox-input"
            id="mock-nk-1"
            name="input-checkbox-small"
            type="checkbox"
            value="tc"
          />
        </div>
      </div>
      <span
        class="emotion-9"
      >
        Agree with T&C small
      </span>
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset renders large legend 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 12px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      Search Legend
    </legend>
    <label
      for="search"
    >
      <input
        id="search"
        name="search"
        type="text"
      />
      Search input:
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset renders medium legend 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 12px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      Search Legend
    </legend>
    <label
      for="search"
    >
      <input
        id="search"
        name="search"
        type="text"
      />
      Search input:
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset renders small legend 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 12px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      Search Legend
    </legend>
    <label
      for="search"
    >
      <input
        id="search"
        name="search"
        type="text"
      />
      Search input:
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset should render tags correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
}

<fieldset
    class="emotion-0"
  >
    <label
      for="search"
    >
      <input
        id="search"
        name="search"
        type="text"
      />
      Search input:
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset should render with button inside the legend element 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 12px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      <button
        type="button"
      >
        Legend as a button
      </button>
    </legend>
    <label
      for="search"
    >
      <input
        id="search"
        name="search"
        type="text"
      />
      Search input:
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset should render with legend 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 12px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      Search Legend
    </legend>
    <label
      for="search"
    >
      <input
        id="search"
        name="search"
        type="text"
      />
      Search input:
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset should render with logical props overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
  margin-inline: 30px;
  padding-inline: 30px;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 12px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      Search Legend
    </legend>
    <label
      for="search"
    >
      <input
        id="search"
        name="search"
        type="text"
      />
      Search input:
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset should render with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
  background-color: #F79247;
  border-color: #6454E3;
  border-width: 1px;
  border-style: solid;
  padding: 4px;
}

.emotion-1 {
  display: table;
  margin: 0;
  padding: 0;
  padding: 1px 0;
  background-color: #6DB681;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 8px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<fieldset
    class="emotion-0"
  >
    <legend
      class="emotion-1"
    >
      Search Legend
    </legend>
    <label
      for="search"
    >
      <input
        id="search"
        name="search"
        type="text"
      />
      Search input:
    </label>
  </fieldset>
</DocumentFragment>
`;
